examples/01-kgateway/tlsroute-passthrough/02-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-tls
  namespace: 01-kgateway-tlsroute-passthrough
  labels:
    app.kubernetes.io/name: nginx-tls
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 443
    volumeMounts:
    - name: tls-cert
      mountPath: /etc/nginx/ssl
      readOnly: true
    - name: nginx-config
      mountPath: /etc/nginx/conf.d
  volumes:
  - name: tls-cert
    secret:
      secretName: passthrough-backend-cert-secret
  - name: nginx-config
    configMap:
      name: nginx-tls-config
