examples/01-kgateway/tlsroute-passthrough/03-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-tls-service
  namespace: 01-kgateway-tlsroute-passthrough
spec:
  selector:
    app.kubernetes.io/name: nginx-tls
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
