examples/01-kgateway/tlsroute-passthrough/06-tlsroute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: tls-route-passthrough
  namespace: 01-kgateway-tlsroute-passthrough
spec:
  hostnames:
    - "www.example.com"
    - "example.com"
  parentRefs:
    - name: tlsroute-passthrough-gateway
      namespace: kgateway-system
      sectionName: tls-passthrough
  rules:
    - backendRefs:
        - name: nginx-tls-service
          port: 443
